Cleanup code; fix tests